# GAMES101

./: .gitignore
Assignment1/src/: CMakeLists.txt  main.cpp
Assignment2/src/: CMakeLists.txt  main.cpp  rasterizer.cpp
Assignment3/Code/: CMakeLists.txt  main.cpp  rasterizer.cpp
Assignment4/code/: CMakeLists.txt  main.cpp
Hw5/Code/: Light.hpp  Object.hpp  Renderer.cpp  Renderer.hpp  Scene.hpp  Sphere.hpp  Triangle.hpp  Vector.hpp  global.hpp  main.cpp
PA6/Assignment6/: BVH.cpp  BVH.hpp  Bounds3.hpp  Intersection.hpp  Material.hpp  OBJ_Loader.hpp  Object.hpp  Ray.hpp  Renderer.cpp  Renderer.hpp  Sphere.hpp  Triangle.hpp  Vector.hpp  main.cpp
PA7/Assignment7/: BVH.cpp  BVH.hpp  Bounds3.hpp  OBJ_Loader.hpp  Object.hpp  Scene.cpp  Scene.hpp  Sphere.hpp  Triangle.hpp  Vector.hpp
pa0/: CMakeLists.txt  main.cpp
